:sparkles: random color in contributions graph

--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
     "manifest_version": 2,
-    "name": "Wish me on GitHub",
-    "description": "Get festival wishes on GitHub so that you don't miss them out in your geeky coding life!",
-    "version": "1",
+    "name": "Beautiful GitHub",
+    "description": "Beautiful color for contributions graph randomly picked!",
+    "version": "1.0.0",
     "author": "Vatsal Joshi",
-    "homepage_url": "https://github.com/vatz88/Wish-me-on-GitHub",
+    "homepage_url": "https://github.com/vatz88/Beautiful-GitHub",
     "content_scripts": [{
-        "matches": ["https://github.com/+*"],
+        "matches": ["https://github.com/*"],
         "js": ["jquery.min.js", "script.js"],
         "run_at": "document_end"
     }]
