--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,12 @@
     "manifest_version": 2,
     "name": "Beautiful GitHub",
     "description": "Beautiful new colors for GitHub contributions graph picked randomly.",
-    "version": "1.0.1",
+    "icons": {
+        "16": "icons/icon16.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
+    },
+    "version": "1.0.2",
     "author": "Vatsal Joshi",
     "homepage_url": "https://github.com/vatz88/Beautiful-GitHub",
     "content_scripts": [{
