:fire: not so good color removed, jquery slim instead jquery

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,18 +1,18 @@
 {
     "manifest_version": 2,
     "name": "Beautiful GitHub",
+    "version": "1.0.4",
     "description": "Beautiful new colors for GitHub contributions graph picked randomly.",
     "icons": {
         "16": "icons/icon16.png",
         "48": "icons/icon48.png",
         "128": "icons/icon128.png"
     },
-    "version": "1.0.2",
     "author": "Vatsal Joshi",
-    "homepage_url": "https://github.com/vatz88/Beautiful-GitHub",
+    "homepage_url": "https://vatz88.in/Beautiful-GitHub/",
     "content_scripts": [{
         "matches": ["https://github.com/*"],
-        "js": ["jquery.min.js", "script.js"],
+        "js": ["jquery.slim.min.js", "script.js"],
         "run_at": "document_end"
     }]
 }
